<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SettingsFragment">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_100sdp"
            android:id="@+id/ivUser"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/orange"
            android:layout_height="@dimen/_100sdp"/>
        <TextView
            android:id="@+id/tvUserName"
            android:text="@string/john_doe"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/antoniobold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvRole"
            android:textSize="@dimen/_8sdp"
            android:text="@string/administrator"
            android:fontFamily="@font/antoniobold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:padding="@dimen/_12sdp"
            android:orientation="vertical"
            android:layout_margin="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:background="@drawable/settings_bg"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:padding="@dimen/_6sdp"
                android:text="@string/account_settings"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:padding="@dimen/_6sdp"
                android:text="@string/help"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:padding="@dimen/_6sdp"
                android:text="@string/about"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:padding="@dimen/_6sdp"
                android:text="@string/expiry_date"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:padding="@dimen/_6sdp"
                android:text="@string/backup_now"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="1dp"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:padding="@dimen/_6sdp"
                android:text="@string/logout"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>