<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_width="@dimen/_300sdp"
            android:scaleType="centerCrop"
            android:layout_height="@dimen/_100sdp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="@dimen/_12sdp"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/login_back"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/textColor"
                android:text="@string/welcome_to_parkzapp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/login_to_your_account"
                android:gravity="center"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email/Username"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/etName"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/etPass"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:text="@string/remember_me"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:text="Login"
                android:id="@+id/btnLogin"
                android:backgroundTint="@color/primary"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="Request Demo"
                android:textColor="@color/primary"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>